[tool.poetry]
name = "endive"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyeda = "^0.29.0"
graphviz = "^0.20.3"
Flask = "^3.0.2"
Flask-Cors = "^4.0.0"
dot2tex = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
